--- a/package.json
+++ b/package.json
@@ -11,11 +11,14 @@
   },
   "dependencies": {
     "@mdi/font": "^7.4.47",
+    "@pinia/nuxt": "^0.5.4",
     "nuxt": "^3.13.0",
+    "pinia": "^2.2.2",
     "vue": "^3.4.38"
   },
   "devDependencies": {
     "eslint-plugin-vuetify": "^2.4.0",
+    "typescript": "^5.5.4",
     "vite-plugin-vuetify": "^2.0.4",
     "vuetify": "^3.7.0"
   }
