--- a/package.json
+++ b/package.json
@@ -7,7 +7,8 @@
     "dev": "nuxt dev",
     "generate": "nuxt generate",
     "preview": "nuxt preview",
-    "postinstall": "nuxt prepare"
+    "postinstall": "nuxt prepare",
+    "test": "vitest"
   },
   "dependencies": {
     "@mdi/font": "^7.4.47",
@@ -17,9 +18,14 @@
     "vue": "^3.4.38"
   },
   "devDependencies": {
+    "@nuxt/test-utils": "^3.14.1",
+    "@vue/test-utils": "^2.4.6",
     "eslint-plugin-vuetify": "^2.4.0",
+    "happy-dom": "^15.0.0",
+    "playwright-core": "^1.46.1",
     "typescript": "^5.5.4",
     "vite-plugin-vuetify": "^2.0.4",
+    "vitest": "^2.0.5",
     "vuetify": "^3.7.0"
   }
 }
