--- a/package.json
+++ b/package.json
@@ -15,10 +15,14 @@
     "@pinia/nuxt": "^0.5.4",
     "nuxt": "^3.13.0",
     "pinia": "^2.2.2",
-    "vue": "^3.4.38"
+    "vue": "^3.4.38",
+    "workbox-core": "^7.1.0",
+    "workbox-precaching": "^7.1.0",
+    "workbox-routing": "^7.1.0"
   },
   "devDependencies": {
     "@nuxt/test-utils": "^3.14.1",
+    "@vite-pwa/nuxt": "^0.10.0",
     "@vue/test-utils": "^2.4.6",
     "eslint-plugin-vuetify": "^2.4.0",
     "happy-dom": "^15.0.0",
