--- a/tsconfig.json
+++ b/tsconfig.json
@@ -3,6 +3,8 @@
   "extends": "./.nuxt/tsconfig.json",
 
   "compilerOptions": {
+    "moduleResolution": "node",
+    "lib": ["ESNext", "DOM", "WebWorker"],
     "strict": true,
     "types": ["@pinia/nuxt"]
   }
