--- a/package.json
+++ b/package.json
@@ -24,12 +24,9 @@
     "@nuxt/test-utils": "^3.14.1",
     "@vite-pwa/nuxt": "^0.10.0",
     "@vue/test-utils": "^2.4.6",
-    "eslint-plugin-vuetify": "^2.4.0",
     "happy-dom": "^15.0.0",
     "playwright-core": "^1.46.1",
     "typescript": "^5.5.4",
-    "vite-plugin-vuetify": "^2.0.4",
-    "vitest": "^2.0.5",
-    "vuetify": "^3.7.0"
+    "vitest": "^2.0.5"
   }
 }
